# libtransmogrify

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md
include/: transmog.h
include/transmog/: config.h  config.h.in  transmog.h  version.h
src/: CMakeLists.txt  libtransmog.c
src/libtransmog/: CMakeLists.txt  libtransmog.c  libtransmog.pc.in  version.c  version.c.in
test/: CMakeLists.txt  CMakeLists.txt.in  test.cpp  test_main.cpp
